--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
 </head>
 
-<body>
+<body style="background-color: brown;">
     <table align="center" width="800" height="800" border="1">
    
         <tr>
