heading style change

--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
         <tr>
        
         <td></td>
-        <td>A</td>
-        <td>B</td>
-        <td>C</td>
-        <td>D</td>
-        <td>E</td>
-        <td>F</td>
-        <td>G</td>
-        <td>H</td>
+        <td style="color: antiquewhite;">A</td>
+        <td style="color: antiquewhite;">B</td>
+        <td style="color: antiquewhite;">C</td>
+        <td style="color: antiquewhite;">D</td>
+        <td style="color: antiquewhite;">E</td>
+        <td style="color: antiquewhite;">F</td>
+        <td style="color: antiquewhite;">G</td>
+        <td style="color: antiquewhite;">H</td>
     </tr>
    
 <tr>
-    <th>8</th>
+    <th style="color: antiquewhite;">8</th>
     <td width="100" height="100" bgcolor=white></td>
     <td width="100" height="100" bgcolor=black></td>
     <td width="100" height="100" bgcolor=white></td>
@@ -35,7 +35,7 @@
     <td width="100" height="100" bgcolor=black></td>
 </tr>
 <tr>
-    <th>7</th>
+    <th style="color: antiquewhite;">7</th>
     <td width="100" height="100" bgcolor=black></td>
     <td width="100" height="100" bgcolor=white></td>
     <td width="100" height="100" bgcolor=black></td>
@@ -46,7 +46,7 @@
     <td width="100" height="100" bgcolor=white></td>
 </tr>
 <tr>
-    <th>6</th>
+    <th style="color: antiquewhite;">6</th>
     <td width="100" height="100" bgcolor=white></td>
     <td width="100" height="100" bgcolor=black></td>
     <td width="100" height="100" bgcolor=white></td>
@@ -57,7 +57,7 @@
     <td width="100" height="100" bgcolor=black></td>
 </tr>
 <tr>
-    <th>5</th>
+    <th style="color: antiquewhite;">5</th>
     <td width="100" height="100" bgcolor=black></td>
     <td width="100" height="100" bgcolor=white></td>
     <td width="100" height="100" bgcolor=black></td>
@@ -69,7 +69,7 @@
 </tr>
 
 <tr>
-    <th>4</th>
+    <th style="color: antiquewhite;">4</th>
     <td width="100" height="100" bgcolor=white></td>
     <td width="100" height="100" bgcolor=black></td>
     <td width="100" height="100" bgcolor=white></td>
@@ -80,7 +80,7 @@
     <td width="100" height="100" bgcolor=black></td>
 </tr>
 <tr>
-    <th>3</th>
+    <th style="color: antiquewhite;">3</th>
     <td width="100" height="100" bgcolor=black></td>
     <td width="100" height="100" bgcolor=white></td>
     <td width="100" height="100" bgcolor=black></td>
@@ -92,7 +92,7 @@
    
 </tr>
 <tr>
-    <th>2</th>
+    <th style="color: antiquewhite;">2</th>
     <td width="100" height="100" bgcolor=white></td>
     <td width="100" height="100" bgcolor=black></td>
     <td width="100" height="100" bgcolor=white></td>
@@ -104,7 +104,7 @@
 
 </tr>
 <tr>
-    <th>1</th>
+    <th style="color: antiquewhite;">1</th>
     <td width="100" height="100" bgcolor=black></td>
     <td width="100" height="100" bgcolor=white></td>
     <td width="100" height="100" bgcolor=black></td>
